# google-adk

./: .env.example  README.md  pyproject.toml  requirements.txt
agent_id/: README.md  agent.py  deploy.py  pyproject.toml
bigquery/: pyproject.toml
hello/: .env.example  README.md  agent.py  deploy.py  pyproject.toml
hello/hello/: agent.py
hello_auth/: agent.py  pyproject.toml
hello_auth/hello_auth/: agent.py
scc/: agent.py  deploy.py  pyproject.toml
scc/scc/: prompt.py
secret_agent/: agent.py  deploy.py  pyproject.toml
security_manager/: agent.py  deploy.py  pyproject.toml
security_manager/security_manager/: __init__.py  prompt.py
security_manager/security_manager/sub_agents/scc/: __init__.py
security_manager/security_manager/sub_agents/web_risk/: __init__.py  agent.py
security_manager/sub_agents/scc/: agent.py
security_manager/sub_agents/web_risk/: prompt.py
send_email/: .env.example  README.md  deploy.py  pyproject.toml
send_email/send_email/: agent.py
web_risk/: agent.py  deploy.py  pyproject.toml
web_risk/web_risk/: agent.py
