[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-adk-agents"
version = "0.1.0"
description = "Sample Google ADK agents."
readme = "README.md"
authors = ["alphasec"]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["google", "adk", "agents", "gemini"]

dependencies = [
"google-cloud-aiplatform",
"google-auth",
"python-dotenv",
]

[tool.setuptools]

packages = ["hello"]
