[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-adk-agents"
version = "0.1.0"
description = "Sample Google ADK agents."
readme = "README.md"
authors = [{ name = "alphasec" }]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["google", "adk", "agents", "gemini"]

dependencies = [
    "google-cloud-aiplatform[adk,agent_engines]==1.110.0",
    "google-auth>=2.41.1",
    "python-dotenv==1.1.1",
    "pydantic==2.12.0",
    "cloudpickle==3.1.1",
]

[tool.setuptools]
packages = ["hello"]
