[project]
name = "google-adk-agent"
version = "0.1.0"
description = "Sample Google ADK agent."
authors = [{ name = "alphasec" }]
readme = "README.md"
license = {text = "MIT"}
keywords = ["google", "adk", "agents", "gemini", "security"]

[tool.poetry]
packages = [
    {include = "hello"}
]

[tool.poetry.dependencies]
python = "^3.12"
google-adk = "^1.27.0"
google-cloud-aiplatform = { extras = [
    "adk",
    "agent-engines",
], version = "^1.141.0" }
google-cloud-modelarmor = "^0.4.0"
google-cloud-asset = "^4.2.0"
typing-extensions = "^4.15.0"
google-genai = "^1.67.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
cloudpickle = "^3.1.0"
requests = "^2.32.5"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
